style/main.css
@import "reset.css";

:root {
  --background-color: #ffffff;
  --primary: #a3a3a3;
  --secondary: #f5f5f5;
  --text-primary: #0a0a0a;
  --text-secondary: #262626;
  --brand: #0ea5e9;
}

body {
  font-family: Arial, Helvetica, sans-serif;
  background-color: var(--background-color);
}

.container {
  width: 100%;

  margin: 0 auto;
  display: flex;
  flex-direction: column;
  padding: 0 1rem 15rem 1rem;
}

/*HEADER STYLES*/
.header {
  width: 100%;
  height: fit-content;

  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1rem 0;
  position: sticky;
  top: 0;
  z-index: 10;

  background-color: var(--background-color);
}

.header__menu {
  display: flex;
  gap: 0.5rem;
}

.header__search-form {
  width: 150px;

  position: relative;
}

.header__search {
  width: 100%;
  height: 100%;

  padding-left: 1rem;

  background-color: var(--secondary);
  border-radius: 9999px;
}

.header__search-icon {
  width: fit-content;
  height: 100%;

  position: absolute;
  top: 0;
  right: 1rem;
  display: flex;
  align-items: center;

  stroke: var(--text-secondary);
}

.header__cart-link {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0.5rem;

  border-radius: 9999px;
  stroke: var(--text-secondary);
}

.cart-count {
  background-color: red;
  width: 15px;
  height: 15px;
  font-weight: 700;
  border-radius: 50%;
  font-size: 1rem;

  padding: 2px;
  text-align: center;
  color: #ffffff;
  position: absolute;
  right: 0px;
  top: 0px;
}

/*FILTERS STYLES*/
.filters {
  margin-top: 1rem;
  display: flex;
  flex-direction: column;
}

.filter-form {
  width: 100%;

  display: flex;
  gap: 0.5rem;
}

.filter-form label {
  width: fit-content;
  height: fit-content;

  padding: 0.5rem 1rem;

  /*TODO CSS VARIABLE*/
  background-color: #f5f5f5;
  border-radius: 9999px;
  cursor: pointer;
  color: var(--text-primary);
}

.filter-form input[type="radio"] {
  display: none;
}

.filter-form label:has(input[type="radio"]:checked) {
  /*TODO CSS VARIABLE*/
  background-color: #e5e5e5;
}

.sort-form {
  width: 100%;

  margin-top: 1rem;
  position: relative;
  display: flex;
  justify-content: flex-end;
}

.sort-form select {
  appearance: none;

  display: block;
  padding: 0.25rem 1rem;

  background-color: transparent;
  border: 2px solid #e5e5e5;
  border-radius: 9999px;
  color: var(--text-primary);
}

.sort-form__icon {
  height: 100%;

  position: absolute;
  top: 0;
  right: 1rem;
  display: flex;
  align-items: center;

  stroke: var(--text-secondary);
}

/*PRODUCT LIST STYLES*/
main {
  width: 100%;

  margin: 0 auto;
  display: flex;
  flex-direction: column;
}

.products {
  width: 100%;

  margin-top: 1rem;
  display: grid;
  grid-template-columns: repeat(2, minmax(0, 1fr));
  gap: 1rem;
}

.product-card {
  width: 100%;

  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.product-card__image-container {
  padding: 3rem 4rem;

  background-color: var(--secondary);
  border-radius: 1rem;
}

.product-card__image {
  mix-blend-mode: multiply;
}

.product-card__content {
  width: 100%;

  display: flex;
}

.product-card__title {
  width: 100%;

  font-size: 0.8rem;
}
.product-list__item__footer button:hover{
  background-color: var(--primary);
}

.product-list__item__footer button:active{
  transform: scale(0.95); 
 
}


.product-list__item__footer button:hover{
  background-color: var(--primary);
}

.product-list__item__footer button:active{
  transform: scale(0.95); 
 
}

.product-card__price {
  width: fit-content;

  font-size: 1.2rem;
}

.product-card__button {
  width: fit-content;

  padding: 0.3rem 1.5rem;

  background-color: var(--brand);
  border-radius: 9999px;
  color: var(--background-color);
  font-size: 1rem;
}

.product-modal__background {
  position: fixed;
  width: 100vw;
  height: 100vh;
  top: 0;
  left: 0;
  background-color: #000000e9;
  display: flex;
  justify-content: center;
  align-items: center;
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s opacity 0, 5s;
  z-index: 10;
}

.product-modal__container {
  background-color: #ffffff;
  width: 40%;
  height: 90%;
  padding: 2rem;
  border-radius: 10px;
  border: 3px solid hsl(0, 0%, 31%);
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.product-modal__container img {
  padding: 3rem;
  width: 20vw;
}

/*SHOPPING CART STYLES*/
.shopping-cart__headers {
  font-weight: 700;
  font-size: 2rem;
  background-color: #c1c1c1;
}

.shopping-cart__table {
  margin: 2rem;
}
.shopping-cart__product-cell {
  display: flex;
  align-items: center;
}
.shopping-cart__total-row {
  font-weight: 700;
  font-size: 2rem;
}

/*MEDIA QUERIES*/
@media (prefers-color-scheme: dark) {
  :root {
  }
}

@media (min-width: 640px) {
  .products {
    grid-template-columns: repeat(3, minmax(0, 1fr));
  }
}

@media (min-width: 768px) {
  .products {
    grid-template-columns: repeat(3, minmax(0, 1fr));
  }
}

@media (min-width: 1024px) {
  .container {
    max-width: 1024px;
  }
  .header__search-form {
    width: 300px;
  }
  .filters {
    flex-direction: row;
  }
  .products {
    grid-template-columns: repeat(4, minmax(0, 1fr));
  }

}

